--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body{
     position: relative;
     opacity: 0.80;
     background-size: cover;
-    background-repeat: repeat;
+    background-repeat: no-repeat;
     background-attachment: fixed;
 }
 
@@ -140,6 +140,12 @@ body{
     .section-container p{
         font-size: 0.875rem;
         line-height: 20px;
+    }
+}
+
+@media (max-width: 700px){
+    .box-img{
+        background-attachment: unset;
     }
 }
 
